--- a/transform_stocks/dockerfile
+++ b/transform_stocks/dockerfile
@@ -8,7 +8,7 @@ WORKDIR /transform_stocks
 COPY req.txt .
 
 # Install the dependencies
-RUN pip install --no-cache-dir -r req.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code into the container
 COPY . .
