--- a/fetch_stocks/.env
+++ b/fetch_stocks/.env
@@ -1,4 +1,4 @@
 STOCK_API_KEY=1OYGVUULAM28CISW
 PROJECT_ID=tomastestproject-433206
-RAW_DATA_TABLE_ID=tomastestproject-433206.testdb_1.raw_stock_data
+RAW_DATA_TABLE_ID="tomastestproject-433206.testdb_1.raw_stock_data"
 CLEANED_DATA_TABLE_ID=tomastestproject-433206.testdb_1.clean_stock_data
