--- a/transform_stocks/cloudbuild.yaml
+++ b/transform_stocks/cloudbuild.yaml
@@ -1,23 +1,37 @@
 steps:
   # Step 1: Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/fetch-raw-news/fetch-raw-news-img', '-f', 'transform_stocks/dockerfile', 'transform_stocks']
-
-  # Step 2: Push the Docker image to Google Container Registry
+     args: [
+      'build', 
+      '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/transform-stocks/transform-stocks-img', 
+      '-f', 'transform_stocks/dockerfile', 
+      'transform-stocks'
+        ]
+  # Step 2: Verify the Docker image is built
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'europe-west1-docker.pkg.dev/tomastestproject-433206/fetch-raw-news/fetch-raw-news-img']
+    args: ['images', 
+    'europe-west1-docker.pkg.dev/tomastestproject-433206/transform-stocks/transform-stocks-img']
+  # Step 3: Push the Docker image to Artifact Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: [
+      'push', 
+        'europe-west1-docker.pkg.dev/tomastestproject-433206/clean-stocks/clean-stocks-img']
 
-  # Step 3: Deploy the Docker image to Cloud Run
+  # Step 4: Deploy the Docker image to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['run', 'deploy', 'fastapi-clean-stocks', 
-           '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/fetch-raw-news/fetch-raw-news-img',
-           '--platform', 'managed',
-           '--region', 'europe-west1',
-           '--allow-unauthenticated']
-
+    # Step 4: Deploy the Docker image to Cloud Run
+    - name: 'gcr.io/cloud-builders/gcloud'
+      args: [
+        'run', 'deploy', 'fastapi-clean-stocks', 
+        '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/transform-stocks/transform-stocks-img',
+        '--platform', 'managed',
+        '--region', 'europe-west1',
+        '--allow-unauthenticated'
+      ]
 images:
-  - 'europe-west1-docker.pkg.dev/tomastestproject-433206/fetch-raw-news/fetch-raw-news-img'
-
+  - 'europe-west1-docker.pkg.dev/tomastestproject-433206/transform-stocks/transform-stocks-img'      
+         
+          
 options:  
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
   logging: CLOUD_LOGGING_ONLY
