--- a/transform_stocks/cloudbuild.yaml
+++ b/transform_stocks/cloudbuild.yaml
@@ -1,33 +1,36 @@
 steps:
   # Step 1: Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
-     args: [
+    args: [
       'build', 
       '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/transform-stocks/transform-stocks-img', 
       '-f', 'transform_stocks/dockerfile', 
       'transform-stocks'
-        ]
+    ]
+
   # Step 2: Verify the Docker image is built
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['images', 
-    'europe-west1-docker.pkg.dev/tomastestproject-433206/transform-stocks/transform-stocks-img']
+    args: [
+      'images', 
+      'europe-west1-docker.pkg.dev/tomastestproject-433206/transform-stocks/transform-stocks-img'
+    ]
+
   # Step 3: Push the Docker image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'push', 
-        'europe-west1-docker.pkg.dev/tomastestproject-433206/clean-stocks/clean-stocks-img']
+      'europe-west1-docker.pkg.dev/tomastestproject-433206/clean-stocks/clean-stocks-img'
+    ]
 
   # Step 4: Deploy the Docker image to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
-    # Step 4: Deploy the Docker image to Cloud Run
-    - name: 'gcr.io/cloud-builders/gcloud'
-      args: [
-        'run', 'deploy', 'fastapi-clean-stocks', 
-        '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/transform-stocks/transform-stocks-img',
-        '--platform', 'managed',
-        '--region', 'europe-west1',
-        '--allow-unauthenticated'
-      ]
+    args: [
+      'run', 'deploy', 'fastapi-clean-stocks', 
+      '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/transform-stocks/transform-stocks-img',
+      '--platform', 'managed',
+      '--region', 'europe-west1',
+      '--allow-unauthenticated'
+    ]
 images:
   - 'europe-west1-docker.pkg.dev/tomastestproject-433206/transform-stocks/transform-stocks-img'      
          
