--- a/create_table/cloudbuild.yaml
+++ b/create_table/cloudbuild.yaml
@@ -1,26 +1,25 @@
 steps:
-# Steg för att installera Google Cloud SDK
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: 'gcloud'
   args:
   - 'functions'
   - 'deploy'
-  - 'create_bigquery_table'  # Byt ut med namnet på din Cloud Function
+  - 'create_bigquery_table'
   - '--runtime'
   - 'python39'
   - '--trigger-http'
   - '--entry-point'
-  - 'create_bigquery_table'  # Byt ut med namnet på din funktion
+  - 'create_bigquery_table'
   - '--region'
   - 'europe-west1'
-  - '--allow-unauthenticated'  # Om du vill att funktionen ska vara offentlig
+  - '--allow-unauthenticated'
 
 timeout: '600s'
+
+serviceAccount: 'service-account-bigquery@tomastestproject-433206.iam.gserviceaccount.com'
+
 
 
 options:  
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
   logging: CLOUD_LOGGING_ONLY
-
-# Se till att serviceAccount är rätt stavat och har tillräckliga rättigheter
-serviceAccount: 'service-account-bigquery@tomastestproject-433206.iam.gserviceaccount.com'
