--- a/create_table/requirements.txt
+++ b/create_table/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.95.1
-pydantic==2.1.1
+functions-framework==3.*
 google-cloud-bigquery==3.11.2
 google-cloud-secret-manager==2.15.0
 functions-framework==3.0.0
 uvicorn==0.22.0
+pydantic
