nu borde det fungera 5

--- a/create_table/cloudbuild.yaml
+++ b/create_table/cloudbuild.yaml
@@ -4,12 +4,12 @@ steps:
   args:
     - 'functions'
     - 'deploy'
-    - 'create_bigquery_table'
+    - 'create_bigquery_table_2'
     - '--runtime'
     - 'python39'
     - '--trigger-http'
     - '--entry-point'
-    - 'create_bigquery_table'
+    - 'create_bigquery_table_2'
     - '--region'
     - 'europe-west1'
     - '--allow-unauthenticated'
