nu borde det fungera 6

--- a/create_table/cloudbuild.yaml
+++ b/create_table/cloudbuild.yaml
@@ -14,11 +14,11 @@ steps:
     - 'europe-west1'
     - '--allow-unauthenticated'
     - '--service-account'
-    - 'service-account-bigquery@tomastestproject-433206.iam.gserviceaccount.com'
+    - 'service-accout-bigquery@tomastestproject-433206.iam.gserviceaccount.com'
 
 timeout: '600s'
 
-serviceAccount: 'service-account-bigquery@tomastestproject-433206.iam.gserviceaccount.com'
+serviceAccount: 'service-accout-bigquery@tomastestproject-433206.iam.gserviceaccount.com'
 
 options:  
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
