--- a/ml_model/cloudbuild.yaml
+++ b/ml_model/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/ml-model/model-img', '-f', 'ml_model/dockerfile', 'ml_model']
+  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/ml-model/model-img', '-f', 'ml_model/Dockerfile', 'ml_model']
 - name: 'gcr.io/cloud-builders/docker'        
   args: ['push', 'europe-west1-docker.pkg.dev/tomastestproject-433206/ml-model/model-img']
 - name: 'gcr.io/cloud-builders/gcloud'
