försöker fixa load_env scripts 2

--- a/ml_model/Dockerfile
+++ b/ml_model/Dockerfile
@@ -7,6 +7,10 @@ WORKDIR /app
 # Kopiera requirements.txt till arbetskatalogen
 COPY requirements.txt .
 
+ENV SECRET_NAME_ENV="my-env-file"
+ENV SECRET_NAME_SA="bigquery-accout-secret"
+ENV PROJECT_ID="tomastestproject-433206"
+
 # Installera Python-biblioteken som behövs
 RUN pip install --no-cache-dir -r requirements.txt
 
@@ -18,7 +22,7 @@ EXPOSE 8080
 
 # Kör load_env.py för att ladda miljövariabler
 # Kör både load_env.py och starta appen när containern startas
-CMD ["bash", "-c", "python load_env.py && uvicorn main:app --host 0.0.0.0 --port 8080"]
+#CMD ["bash", "-c", "python load_env.py && uvicorn main:app --host 0.0.0.0 --port 8080"]
 
 # Starta Flask-applikationen
-#CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
