made adjustments to clean_stocks, spliting the functions into smaller ones

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ testing.ipynb
 fetch_stocks_raw.ipynb
 fetch_stocks_raw2.py
 fetch_stocks_raw_notebook.ipynb
+fixing.py
+clean_stocks_copy.py
+
+
 
 
 
