testar model-scripts

--- a/ml_model/requirements.txt
+++ b/ml_model/requirements.txt
@@ -1,11 +1,12 @@
-
-google-cloud-bigquery
-google-cloud-storage
-scikit-learn
 pandas
-python-dotenv
-google-cloud-secret-manager
-requests
-
+numpy
+scikit-learn
+joblib
 fastapi
-uvicorn
+uvicorn 
+pydantic
+pandas_market_calendars
+google-cloud-bigquery
+google-cloud-secret-manager
+google-api-core
+google-cloud-storage
