--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ fetch_news/app_3_notebook.ipynb
 
 
 
-
-
+.ruff_cache
+.pytest_cache
 transform_news_2/tomastestproject-433206-adc5bc090976.json
 
 transform_stocks/fetch_stocks_clean_daily.ipynb
