--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,10 @@ fetch_stocks_raw_notebook.ipynb
 
 
 
-
+test_clean_news.py
 /ml_model/ml-model
 /ml_model/credentials
 /ml_model/.env
-fetch_news/test_fetch_raw_data.py
+
+load_env.py
+test_clean_news.py
