--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -1,71 +1,44 @@
 name: Lint and Test
- 
+
 on:
-
   push:
-
     branches:
-
       - main
-
   pull_request:
-
     branches:
-
       - main
- 
+
 jobs:
-
   lint_and_test:
-
     runs-on: ubuntu-latest
- 
+
     steps:
-
     - name: Checkout code
-
       uses: actions/checkout@v3
- 
+
     - name: Set up Python
-
       uses: actions/setup-python@v4
-
       with:
-
         python-version: '3.9'
- 
+
     - name: Install dependencies
-
       run: |
-
         pip install -r requirements.txt
-
         pip install pytest
- 
+
     - name: Set up Google Cloud credentials
-
       run: echo "${{ secrets.BIG_QUERY_SECRET }}" > ${{ github.workspace }}/gcp-key.json
-
       env:
-
         GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.BIG_QUERY_SECRET }}
- 
-    - name: Set up News API key
 
-      run: echo "${{ secrets.NEWS_API_KEY }}" > ${{ github.workspace }}/news-api-key.txt
-
+    - name: Export News API key
       env:
-
         NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
- 
-    - name: Run Tests
-
       run: |
+        # Export the NEWS_API_KEY to make it available in subsequent steps
+        echo "NEWS_API_KEY=${NEWS_API_KEY}" >> $GITHUB_ENV
 
+    - name: Run Tests
+      run: |
         export GOOGLE_APPLICATION_CREDENTIALS="${{ github.workspace }}/gcp-key.json"
-
-        export NEWS_API_KEY=$(cat ${{ github.workspace }}/news-api-key.txt)
-
         pytest
-
- 
