--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+      - testing
   pull_request:
     branches:
       - main
+      - testing
 
 jobs:
   lint_and_test:
