--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -28,10 +28,10 @@ jobs:
         pip install -r requirements.txt
         pip install pytest
 
-    - name: Set up Google Cloud credentials
-      run: echo "${{ secrets.BIG_QUERY_SECRET }}" > ${{ github.workspace }}/gcp-key.json
-      env:
-        GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.BIG_QUERY_SECRET }}
+    - name: Set GCP credentials from secret
+      run: |
+        export GOOGLE_APPLICATION_CREDENTIALS=${{ secrets.BIG_QUERY_SECRET }}
+
 
     - name: Debug JSON content
       run: cat ${{ github.workspace }}/gcp-key.json
