--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -35,4 +35,5 @@ jobs:
         env:
           PROJECT_ID: ${{ secrets.BIG_QUERY_SECRET }}  # Use your GCP project ID stored in secrets
         run: |
-          pytest -p no:warnings
+          pytest -v
+
